Practice5_K8s_Ingress_MultiPath_Routing/manifests/world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: world
  template:
    metadata:
      labels:
        app: world
    spec:
      containers:
        - name: world
          image: hashicorp/http-echo
          args:
            - "-text=World Path"
          ports:
            - containerPort: 5678
