Practice5_K8s_Ingress_MultiPath_Routing/manifests/world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: world-service
spec:
  selector:
    app: world
  ports:
    - port: 80
      targetPort: 5678
