Practice5_K8s_Ingress_MultiPath_Routing/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-routing-ingress
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 80
          - path: /world
            pathType: Prefix
            backend:
              service:
                name: world-service
                port:
                  number: 80
